<resources>
    <string name="app_name">"DP3T Demo"</string>
    <string name="CFBundleDisplayName">"DP3T Demo"</string>
    <string name="loading_view_reload">"Reload"</string>
    <string name="loading_view_error_title">"Error"</string>
    <string name="force_update_title">"Update required"</string>
    <string name="inform_continue_button">"Continue"</string>
    <string name="inform_send_button_title">"Send anonymous report"</string>
    <string name="inform_send_thankyou">"Thank you"</string>
    <string name="inform_send_thankyou_text">"You have reported your positive test anonymously via the app.

Thank you for helping to contain the spread of the coronavirus."</string>
    <string name="inform_fertig_button_title">"Close"</string>
    <string name="handshakes_title_homescreen">"Encounters"</string>
    <string name="tab_theapp_title">"The App"</string>
    <string name="cancel">"Cancel"</string>
    <string name="push_exposed_title">"New message"</string>
    <string name="push_exposed_text">"Open the app to read the message"</string>
    <string name="android_button_permission_location">"Permit localisation"</string>
    <string name="android_button_ok">"Ok"</string>
    <string name="onboarding_continue_button">"Continue"</string>
    <string name="onboarding_finish_button">"Finish"</string>
    <string name="unexpected_error_title">"An unexpected error has occurred"</string>
    <string name="bluetooth_turned_off">"The app is not working because Bluetooth is switched off"</string>
    <string name="bluetooth_permission_turned_off">"The app is not working because Bluetooth is not permitted"</string>
    <string name="NSBluetoothPeripheralUsageDescription">"Encounters will be recognised in the background via low energy Bluetooth."</string>
    <string name="NSBluetoothAlwaysUsageDescription">"Encounters will be recognised in the background via low energy Bluetooth."</string>
    <string name="android_foreground_service_notification_text">"Encounters will be registered anonymously on your device."</string>
    <string name="inform_code_title">"Enter the Covidcode"</string>
    <string name="inform_code_text">"Enter the Covidcode sent to you."</string>
    <string name="inform_code_no_code">"Do you need help?"</string>
    <string name="tracing_setting_title">"Tracing"</string>
    <string name="tracing_setting_text">"Allow anonymous tracing"</string>
    <string name="bluetooth_setting_tracking_inactive">"Tracing deactivated"</string>
    <string name="bluetooth_setting_data_explanation_title">"Are my data secure?"</string>
    <string name="bluetooth_setting_tracking_explanation_text2">"An encounter with another user is only saved locally on your smartphone."</string>
    <string name="reports_title_homescreen">"Reports"</string>
    <string name="meldungen_no_meldungen_title">"No reports"</string>
    <string name="push_deactivated_title">"Messages deactivated"</string>
    <string name="push_deactivated_text">"Change the settings to receive information directly in the event of a report."</string>
    <string name="meldungen_meldung_title">"Possible infection"</string>
    <string name="meldungen_meldung_text">"An infection is suspected."</string>
    <string name="tracing_active_title">"Tracing active"</string>
    <string name="tracing_active_text">"Encounters will be registered anonymously."</string>
    <string name="android_tracing_error_title">"Tracing not active"</string>
    <string name="android_foreground_service_notification_errors">"App currently unable to function properly"</string>
    <string name="android_foreground_service_notification_error_network_sync">"An error occurred when loading the data"</string>
    <string name="android_foreground_service_notification_error_location_permission">"For the app to use Bluetooth, you must enable your location to be used. The app itself does not recognise your location at any time."</string>
    <string name="android_foreground_service_notification_error_battery_optimization">"For tracing to work precisely, the app must also run in the background. This will cause a minor increase in battery usage."</string>
    <string name="preview_warning_title">"Version preview"</string>
    <string name="preview_warning_text">"This app provides a preview of how the DP-*T works. It is not a functioning COVIS-19 tracer."</string>
    <string name="debug_settings_title">"Debug settings"</string>
    <string name="debug_state_setting_title">"Overwrite app status"</string>
    <string name="debug_state_setting_text">"This setting overwrites the app's visual status. Tracing functionality remains unaffected."</string>
    <string name="debug_state_setting_option_none">"No overwrite"</string>
    <string name="debug_state_setting_option_ok">"Healthy"</string>
    <string name="debug_state_setting_option_exposed">"Contact has tested positive"</string>
    <string name="debug_state_setting_option_infected">"Reported yourself as positive"</string>
    <string name="debug_sdk_state_title">"SDK status"</string>
    <string name="debug_sdk_state_text">"Current status of DP-3T SDK"</string>
    <string name="debug_sdk_state_last_synced">"Last synchronisation"</string>
    <string name="debug_sdk_state_self_exposed">"Reported yourself"</string>
    <string name="debug_sdk_state_contact_exposed">"Contact reported"</string>
    <string name="debug_sdk_state_number_handshakes">"Number of handshakes"</string>
    <string name="debug_sdk_state_boolean_true">"Yes"</string>
    <string name="debug_sdk_state_boolean_false">"No"</string>
    <string name="debug_sdk_button_reset">"Reset SDK"</string>
    <string name="android_debug_sdk_reset_text">"The local SDK status has been reset."</string>
    <string name="tab_tracing_title">"Tracing"</string>
    <string name="whattodo_title_positivetest">"you test positive"</string>
    <string name="whattodo_subtitle_positivetest">"What to do if …"</string>
    <string name="inform_detail_subtitle">"What to do if …"</string>
    <string name="inform_detail_title">"you test positive?"</string>
    <string name="inform_detail_box_subtitle">"With the Covidcode"</string>
    <string name="inform_detail_box_title">"Send an anonymous report"</string>
    <string name="inform_detail_box_button">"Enter the Covidcode"</string>
    <string name="inform_detail_box_text">"Use the Covidcode sent to you to report the test anonymously in the app."</string>
    <string name="symptom_detail_subtitle">"What do I do if …"</string>
    <string name="symptom_detail_title">"I feel ill?"</string>
    <string name="symptom_detail_box_subtitle">"In the case of symptoms ..."</string>
    <string name="symptom_detail_box_title">"Contact your doctor"</string>
    <string name="symptom_detail_box_button">"To the coronavirus check"</string>
    <string name="symptom_detail_box_text">"If you have possible coronavirus symptoms, contact your doctor or the medical emergency service."</string>
    <string name="inform_detail_navigation_title">"Tested positive"</string>
    <string name="symptom_detail_navigation_title">"Symptoms"</string>
    <string name="tracing_turned_off_title">"Tracing deactivated"</string>
    <string name="tracing_turned_off_text">"Activate tracing so that the app works."</string>
    <string name="bluetooth_turned_off_title">"Bluetooth off"</string>
    <string name="bluetooth_turned_off_text">"Switch on Bluetooth on your device so that anonymous tracing works."</string>
    <string name="bluetooth_turn_on_button_title">"Switch on Bluetooth"</string>
    <string name="bluetooth_permission_error_title">"Bluetooth use declined"</string>
    <string name="bluetooth_permission_error_text">"Enable the use of Bluetooth so that anonymous tracing works."</string>
    <string name="symptom_detail_corona_check_url">"https://check.bag-coronavirus.ch/screening"</string>
    <string name="push_open_settings_button">"Change settings"</string>
    <string name="meldungen_no_meldungen_subtitle">"No potential infections have been reported"</string>
    <string name="no_meldungen_box_title">"Protect yourself"</string>
    <string name="no_meldungen_box_subtitle">"What should I do?"</string>
    <string name="no_meldungen_box_text">"Follow the government recommendations on hygiene and social distancing."</string>
    <string name="meldung_detail_positive_tested_title">"Tested positive"</string>
    <string name="meldung_detail_positive_tested_subtitle">"You have tested positive for the  new coronavirus."</string>
    <string name="meldung_detail_positive_test_box_subtitle">"What do I have to do?"</string>
    <string name="meldung_detail_positive_test_box_title">"Self-isolation"</string>
    <string name="meldung_detail_positive_test_box_text">"Follow the instructions on self-isolation."</string>
    <string name="tracing_ended_title">"Tracing ended"</string>
    <string name="tracing_ended_text">"No further encounters registered"</string>
    <string name="exposed_info_contact_hotline">"Contact the"</string>
    <string name="meldungen_detail_explanation_title">"Be careful!"</string>
    <string name="meldungen_detail_explanation_text1">"You could be infectious without realising it."</string>
    <string name="meldungen_detail_explanation_text2">"Please protect your family, your friends and those around you. Avoid contacts for up to 10 days after a possible infection."</string>
    <string name="meldungen_detail_guard_text">"If you have any questions:
Infoline Coronavirus
0000"</string>
    <string name="meldungen_detail_call_again_button">"Call again"</string>
    <string name="meldungen_detail_call_last_call">"Last call: (DATE)"</string>
    <string name="android_onboarding_bt_permission_title">"Enable location for Bluetooth"</string>
    <string name="android_onboarding_bt_permission_text">"For the app to work and for access to Bluetooth, you must enable the location function."</string>
    <string name="android_onboarding_bt_permission_button">"Allow"</string>
    <string name="android_onboarding_bt_permission_goodtoknow">"Good to know"</string>
    <string name="android_onboarding_bt_permission_info_1_title">"Your location remains secret"</string>
    <string name="android_onboarding_bt_permission_info_1_text">"On Android devices, enabling Bluetooth requires you to enable the sharing of your location. This is why the location function must be enabled even if the app does not register your location at any time."</string>
    <string name="android_onboarding_bt_permission_info_2_title">"You remain anonymous"</string>
    <string name="android_onboarding_bt_permission_info_2_text">"No personal data is visible via Bluetooth."</string>
    <string name="meldungen_detail_explanation_text3">"As soon as you have any symptoms, contact your doctor."</string>
    <string name="meldungen_explanation_link_title">"Instructions on self-quarantine"</string>
    <string name="meldungen_meldungen_faq1_title">"Do I have to call?"</string>
    <string name="meldungen_meldungen_faq1_text">"It is important that you call every time you receive a notification. You will remain anonymous. No personal data will be recorded."</string>
    <string name="meldungen_detail_call_thankyou_title">"Thank you for your cooperation."</string>
    <string name="inform_detail_faq1_title">"What is a Covidcode?"</string>
    <string name="inform_detail_faq1_text">"People who have tested positive for the new coronavirus receive a Covidcode. This ensures that only confirmed cases are notified via the app. "</string>
    <string name="inform_detail_faq2_title">"How do I remain anonymous?"</string>
    <string name="inform_detail_faq2_text">"Only the temporary keys from your app are sent. No personal data. Other dp3t apps can then check if they have had an encounter with your app in the past few days. "</string>
    <string name="date_in_days">"There are {COUNT} days left"</string>
    <string name="android_accessibility_back_button">"Back"</string>
</resources>