<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Ubique Innovation AG
  ~ https://www.ubique.ch
  ~ Copyright (c) 2020. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	android:padding="@dimen/spacing_medium_large">

	<TextView
		android:id="@+id/cancel_button"
		style="@style/NextStep.Button.Transparent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="end"
		android:text="@string/cancel" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginTop="@dimen/spacing_huge"
		android:layout_weight="1">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				style="@style/NextStep.Text.Title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="bottom|center_horizontal"
				android:text="@string/inform_code_title" />

			<TextView
				style="@style/NextStep.Text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing_huge"
				android:layout_marginBottom="@dimen/spacing_huge"
				android:gravity="center_horizontal"
				android:paddingStart="@dimen/spacing_huge"
				android:paddingEnd="@dimen/spacing_huge"
				android:text="@string/inform_code_text" />

			<org.dpppt.android.app.trigger.views.ChainedEditText
				android:id="@+id/trigger_fragment_input"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/spacing_huge"/>

			<Button
				android:id="@+id/trigger_fragment_button_trigger"
				style="@style/NextStep.Button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginBottom="@dimen/spacing_large"
				android:enabled="false"
				android:text="@string/inform_send_button_title" />

			<TextView
				android:id="@+id/trigger_fragment_no_code_button"
				style="@style/NextStep.Button.Transparent.Light"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:padding="@dimen/spacing_medium"
				android:text="@string/inform_code_no_code" />

		</LinearLayout>
	</ScrollView>

</LinearLayout>